[package]
name = "Appendix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "debug_print"
path = "src/debug_print.rs"

[[bin]]
name = "filter_map"
path = "src/filter_map.rs"

[[bin]]
name = "filter"
path = "src/filter.rs"

[[bin]]
name = "find_map"
path = "src/find_map.rs"

[[bin]]
name = "find"
path = "src/find.rs"

[[bin]]
name = "hash_set"
path = "src/hash_set.rs"

[[bin]]
name = "hash_map"
path = "src/hash_map.rs"

[dependencies]
